exported_metadata/main/default/objects/Approval_Config_old__mdt/Approval_Config_old__mdt.object-meta.xml
<CustomObject>
    <description>Stores metadata records for flow-based approval decisions.</description>
    <label>Approval Config old</label>
    <pluralLabel>Approval Configs old</pluralLabel>
</CustomObject>