exported_metadata/main/default/objects/Approval_Config_old__mdt/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <description>config name</description>
    <label>Config Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>